Added functionality to bet page to make a pick and then select a bet amount depending on how many points the player has available to bet.

--- a/bets/static/bets/css/bets.css
+++ b/bets/static/bets/css/bets.css
@@ -46,3 +46,9 @@ input[type=radio]+label::before {
     width: 0;
     height: 0;
 }
+
+/*Hide input
+.hidden-input {
+    position: absolute;
+    display: none;
+}*/
