--- a/command/templates/command/gameOptions.html
+++ b/command/templates/command/gameOptions.html
@@ -49,34 +49,34 @@
             <tbody>
                 {% for currentGame in gameData %}
                 <tr class="score-input" value="">
-                    <td class="text game-id" value="{{ currentGame.id }}">{{ currentGame.date }} - {{ currentGame.homeTeam.name }} @ {{ currentGame.awayTeam.name }}</td>
+                    <td class="game-id" value="{{ currentGame.id }}">{{ currentGame.date }} - {{ currentGame.homeTeam.name }} @ {{ currentGame.awayTeam.name }}</td>
                     {% if currentGame.pickLocked == False %}
                     <td>
-                        <input type="text" class="form-control home-score" size="3" maxlength="3" value="{{ currentGame.homeScore }}">
+                        <input type="number" class="form-control home-score" size="3" value="{{ currentGame.homeScore }}">
                     </td>
                     <td>
-                        <input type="text" class="form-control home-spread" size="3" maxlength="3" value="{{ currentGame.homeSpread }}">
+                        <input type="number" class="form-control home-spread" size="3" value="{{ currentGame.homeSpread }}">
                     </td>
                     <td>
-                        <input type="text" class="form-control away-score" size="3" maxlength="3" value="{{ currentGame.awayScore }}">
+                        <input type="number" class="form-control away-score" size="3" value="{{ currentGame.awayScore }}">
                     </td>
                     <td>
-                        <input type="text" class="form-control home-spread" size="3" maxlength="3" value="{{ currentGame.homeSpread }}">
+                        <input type="number" class="form-control away-spread" size="3" value="{{ currentGame.awaySpread }}">
                     </td>
                     <td><input class="btn btn-indigo btn-sm m-0 lock-button" value="Lock" /></td>
                     <td><input class="btn btn-indigo btn-sm m-0 unlock-button" value="Unlocked" disabled/></td>
                     {% else %}
                     <td>
-                        <input type="text" class="form-control home-score" size="3" maxlength="3" value="{{ currentGame.homeScore }}">
+                        <input type="number" class="form-control home-score" size="3" value="{{ currentGame.homeScore }}">
                     </td>
                     <td>
-                        <input type="text" class="form-control home-spread" size="3" maxlength="3" value="{{ currentGame.homeSpread }}">
+                        <input type="number" class="form-control home-spread" size="3" value="{{ currentGame.homeSpread }}">
                     </td>
                     <td>
-                        <input type="text" class="form-control away-score" size="3" maxlength="3" value="{{ currentGame.awayScore }}">
+                        <input type="number" class="form-control away-score" size="3" value="{{ currentGame.awayScore }}">
                     </td>
                     <td>
-                        <input type="text" class="form-control home-spread" size="3" maxlength="3" value="{{ currentGame.homeSpread }}">
+                        <input type="number" class="form-control away-spread" size="3" value="{{ currentGame.awaySpread }}">
                     </td>
                     <td><input class="btn btn-indigo btn-sm m-0 lock-button" value="Locked" disabled/></td>
                     <td><input class="btn btn-indigo btn-sm m-0 unlock-button" value="Unlock" /></td>{% endif %}
